build/classes/y.output
   0  $accept : s $end

   1  s : programa

   2  programa : declaraciones

   3  declaraciones : declaraciones declaracion
   4                |

   5  declaracion : defVar ';'
   6              | defTipo
   7              | defFuncion

   8  defVar : VAR listaIdents ':' tipo

   9  listaIdents : IDENT
  10              | listaIdents ',' IDENT

  11  defTipo : TYPE IDENT ':' tipo ';'

  12  tipo : tipoPrimitivo
  13       | array

  14  tipoPrimitivo : INT
  15                | REAL
  16                | DOUBLE
  17                | CHAR
  18                | BYTE
  19                | registro
  20                | IDENT

  21  registro : RECORD '{' atributos '}'

  22  atributos : atributos IDENT ':' tipo ';'
  23            |

  24  array : dimension tipoPrimitivo

  25  dimension : dimension '[' expr ']'
  26            | '[' expr ']'

  27  defFuncion : IDENT '(' params ')' tipoRetorno '{' defVarLocal sentencias '}'

  28  tipoRetorno : ':' tipo
  29              |

  30  defVarLocal : defVarLocal defVar ';'
  31              |

  32  params : listaParams
  33         |

  34  listaParams : IDENT ':' tipo
  35              | listaParams ',' IDENT ':' tipo

  36  sentencias : sentencias sentencia
  37             |

  38  sentencia : asignacion ';'
  39            | while
  40            | if
  41            | retorno ';'
  42            | lectura ';'
  43            | escritura ';'
  44            | funcion ';'

  45  asignacion : expr '=' expr

  46  retorno : RETURN expr

  47  lectura : READ listaValores

  48  escritura : WRITE listaValores

  49  while : WHILE '(' expr ')' '{' sentencias '}'

  50  if : IF '(' expr ')' '{' sentencias '}' else

  51  else : ELSE '{' sentencias '}'
  52       |

  53  listaValores : expr
  54               | listaValores ',' expr

  55  expr : NUM
  56       | CARACTER
  57       | IDENT
  58       | funcion
  59       | '(' expr ')'
  60       | expr '[' expr ']'
  61       | expr '.' IDENT
  62       | cast
  63       | exprBinaria
  64       | exprUnaria

  65  cast : CAST '<' tipo '>' '(' expr ')'

  66  funcion : IDENT '(' listaValoresOpt ')'

  67  listaValoresOpt : listaValores
  68                  |

  69  exprBinaria : expr '+' expr
  70              | expr '-' expr
  71              | expr '*' expr
  72              | expr '/' expr
  73              | expr '%' expr
  74              | expr '<' expr
  75              | expr '>' expr
  76              | expr AND expr
  77              | expr OR expr
  78              | expr IGUALIGUAL expr
  79              | expr DISTINTO expr
  80              | expr MAYOROIGUAL expr
  81              | expr MENOROIGUAL expr

  82  exprUnaria : '!' expr
  83             | '-' expr

state 0
	$accept : . s $end  (0)
	declaraciones : .  (4)

	.  reduce 4

	s  goto 1
	programa  goto 2
	declaraciones  goto 3


state 1
	$accept : s . $end  (0)

	$end  accept


state 2
	s : programa .  (1)

	.  reduce 1


state 3
	programa : declaraciones .  (2)
	declaraciones : declaraciones . declaracion  (3)

	IDENT  shift 4
	VAR  shift 5
	TYPE  shift 6
	$end  reduce 2

	declaracion  goto 7
	defVar  goto 8
	defTipo  goto 9
	defFuncion  goto 10


state 4
	defFuncion : IDENT . '(' params ')' tipoRetorno '{' defVarLocal sentencias '}'  (27)

	'('  shift 11
	.  error


state 5
	defVar : VAR . listaIdents ':' tipo  (8)

	IDENT  shift 12
	.  error

	listaIdents  goto 13


state 6
	defTipo : TYPE . IDENT ':' tipo ';'  (11)

	IDENT  shift 14
	.  error


state 7
	declaraciones : declaraciones declaracion .  (3)

	.  reduce 3


state 8
	declaracion : defVar . ';'  (5)

	';'  shift 15
	.  error


state 9
	declaracion : defTipo .  (6)

	.  reduce 6


state 10
	declaracion : defFuncion .  (7)

	.  reduce 7


state 11
	defFuncion : IDENT '(' . params ')' tipoRetorno '{' defVarLocal sentencias '}'  (27)
	params : .  (33)

	IDENT  shift 16
	')'  reduce 33

	params  goto 17
	listaParams  goto 18


state 12
	listaIdents : IDENT .  (9)

	.  reduce 9


state 13
	defVar : VAR listaIdents . ':' tipo  (8)
	listaIdents : listaIdents . ',' IDENT  (10)

	':'  shift 19
	','  shift 20
	.  error


state 14
	defTipo : TYPE IDENT . ':' tipo ';'  (11)

	':'  shift 21
	.  error


state 15
	declaracion : defVar ';' .  (5)

	.  reduce 5


state 16
	listaParams : IDENT . ':' tipo  (34)

	':'  shift 22
	.  error


state 17
	defFuncion : IDENT '(' params . ')' tipoRetorno '{' defVarLocal sentencias '}'  (27)

	')'  shift 23
	.  error


state 18
	params : listaParams .  (32)
	listaParams : listaParams . ',' IDENT ':' tipo  (35)

	','  shift 24
	')'  reduce 32


state 19
	defVar : VAR listaIdents ':' . tipo  (8)

	'['  shift 25
	IDENT  shift 26
	RECORD  shift 27
	INT  shift 28
	REAL  shift 29
	DOUBLE  shift 30
	CHAR  shift 31
	BYTE  shift 32
	.  error

	tipo  goto 33
	tipoPrimitivo  goto 34
	array  goto 35
	registro  goto 36
	dimension  goto 37


state 20
	listaIdents : listaIdents ',' . IDENT  (10)

	IDENT  shift 38
	.  error


state 21
	defTipo : TYPE IDENT ':' . tipo ';'  (11)

	'['  shift 25
	IDENT  shift 26
	RECORD  shift 27
	INT  shift 28
	REAL  shift 29
	DOUBLE  shift 30
	CHAR  shift 31
	BYTE  shift 32
	.  error

	tipo  goto 39
	tipoPrimitivo  goto 34
	array  goto 35
	registro  goto 36
	dimension  goto 37


state 22
	listaParams : IDENT ':' . tipo  (34)

	'['  shift 25
	IDENT  shift 26
	RECORD  shift 27
	INT  shift 28
	REAL  shift 29
	DOUBLE  shift 30
	CHAR  shift 31
	BYTE  shift 32
	.  error

	tipo  goto 40
	tipoPrimitivo  goto 34
	array  goto 35
	registro  goto 36
	dimension  goto 37


state 23
	defFuncion : IDENT '(' params ')' . tipoRetorno '{' defVarLocal sentencias '}'  (27)
	tipoRetorno : .  (29)

	':'  shift 41
	'{'  reduce 29

	tipoRetorno  goto 42


state 24
	listaParams : listaParams ',' . IDENT ':' tipo  (35)

	IDENT  shift 43
	.  error


state 25
	dimension : '[' . expr ']'  (26)

	'-'  shift 44
	'!'  shift 45
	NUM  shift 46
	CARACTER  shift 47
	IDENT  shift 48
	CAST  shift 49
	'('  shift 50
	.  error

	expr  goto 51
	funcion  goto 52
	cast  goto 53
	exprBinaria  goto 54
	exprUnaria  goto 55


state 26
	tipoPrimitivo : IDENT .  (20)

	.  reduce 20


state 27
	registro : RECORD . '{' atributos '}'  (21)

	'{'  shift 56
	.  error


state 28
	tipoPrimitivo : INT .  (14)

	.  reduce 14


state 29
	tipoPrimitivo : REAL .  (15)

	.  reduce 15


state 30
	tipoPrimitivo : DOUBLE .  (16)

	.  reduce 16


state 31
	tipoPrimitivo : CHAR .  (17)

	.  reduce 17


state 32
	tipoPrimitivo : BYTE .  (18)

	.  reduce 18


state 33
	defVar : VAR listaIdents ':' tipo .  (8)

	.  reduce 8


state 34
	tipo : tipoPrimitivo .  (12)

	.  reduce 12


state 35
	tipo : array .  (13)

	.  reduce 13


state 36
	tipoPrimitivo : registro .  (19)

	.  reduce 19


state 37
	array : dimension . tipoPrimitivo  (24)
	dimension : dimension . '[' expr ']'  (25)

	'['  shift 57
	IDENT  shift 26
	RECORD  shift 27
	INT  shift 28
	REAL  shift 29
	DOUBLE  shift 30
	CHAR  shift 31
	BYTE  shift 32
	.  error

	tipoPrimitivo  goto 58
	registro  goto 36


state 38
	listaIdents : listaIdents ',' IDENT .  (10)

	.  reduce 10


state 39
	defTipo : TYPE IDENT ':' tipo . ';'  (11)

	';'  shift 59
	.  error


state 40
	listaParams : IDENT ':' tipo .  (34)

	.  reduce 34


state 41
	tipoRetorno : ':' . tipo  (28)

	'['  shift 25
	IDENT  shift 26
	RECORD  shift 27
	INT  shift 28
	REAL  shift 29
	DOUBLE  shift 30
	CHAR  shift 31
	BYTE  shift 32
	.  error

	tipo  goto 60
	tipoPrimitivo  goto 34
	array  goto 35
	registro  goto 36
	dimension  goto 37


state 42
	defFuncion : IDENT '(' params ')' tipoRetorno . '{' defVarLocal sentencias '}'  (27)

	'{'  shift 61
	.  error


state 43
	listaParams : listaParams ',' IDENT . ':' tipo  (35)

	':'  shift 62
	.  error


state 44
	exprUnaria : '-' . expr  (83)

	'-'  shift 44
	'!'  shift 45
	NUM  shift 46
	CARACTER  shift 47
	IDENT  shift 48
	CAST  shift 49
	'('  shift 50
	.  error

	expr  goto 63
	funcion  goto 52
	cast  goto 53
	exprBinaria  goto 54
	exprUnaria  goto 55


state 45
	exprUnaria : '!' . expr  (82)

	'-'  shift 44
	'!'  shift 45
	NUM  shift 46
	CARACTER  shift 47
	IDENT  shift 48
	CAST  shift 49
	'('  shift 50
	.  error

	expr  goto 64
	funcion  goto 52
	cast  goto 53
	exprBinaria  goto 54
	exprUnaria  goto 55


state 46
	expr : NUM .  (55)

	.  reduce 55


state 47
	expr : CARACTER .  (56)

	.  reduce 56


state 48
	expr : IDENT .  (57)
	funcion : IDENT . '(' listaValoresOpt ')'  (66)

	'('  shift 65
	OR  reduce 57
	AND  reduce 57
	IGUALIGUAL  reduce 57
	DISTINTO  reduce 57
	'>'  reduce 57
	'<'  reduce 57
	MAYOROIGUAL  reduce 57
	MENOROIGUAL  reduce 57
	'+'  reduce 57
	'-'  reduce 57
	'*'  reduce 57
	'/'  reduce 57
	'%'  reduce 57
	'['  reduce 57
	'.'  reduce 57
	';'  reduce 57
	','  reduce 57
	']'  reduce 57
	')'  reduce 57
	'='  reduce 57


state 49
	cast : CAST . '<' tipo '>' '(' expr ')'  (65)

	'<'  shift 66
	.  error


state 50
	expr : '(' . expr ')'  (59)

	'-'  shift 44
	'!'  shift 45
	NUM  shift 46
	CARACTER  shift 47
	IDENT  shift 48
	CAST  shift 49
	'('  shift 50
	.  error

	expr  goto 67
	funcion  goto 52
	cast  goto 53
	exprBinaria  goto 54
	exprUnaria  goto 55


state 51
	dimension : '[' expr . ']'  (26)
	expr : expr . '[' expr ']'  (60)
	expr : expr . '.' IDENT  (61)
	exprBinaria : expr . '+' expr  (69)
	exprBinaria : expr . '-' expr  (70)
	exprBinaria : expr . '*' expr  (71)
	exprBinaria : expr . '/' expr  (72)
	exprBinaria : expr . '%' expr  (73)
	exprBinaria : expr . '<' expr  (74)
	exprBinaria : expr . '>' expr  (75)
	exprBinaria : expr . AND expr  (76)
	exprBinaria : expr . OR expr  (77)
	exprBinaria : expr . IGUALIGUAL expr  (78)
	exprBinaria : expr . DISTINTO expr  (79)
	exprBinaria : expr . MAYOROIGUAL expr  (80)
	exprBinaria : expr . MENOROIGUAL expr  (81)

	OR  shift 68
	AND  shift 69
	IGUALIGUAL  shift 70
	DISTINTO  shift 71
	'>'  shift 72
	'<'  shift 73
	MAYOROIGUAL  shift 74
	MENOROIGUAL  shift 75
	'+'  shift 76
	'-'  shift 77
	'*'  shift 78
	'/'  shift 79
	'%'  shift 80
	'['  shift 81
	'.'  shift 82
	']'  shift 83
	.  error


state 52
	expr : funcion .  (58)

	.  reduce 58


state 53
	expr : cast .  (62)

	.  reduce 62


state 54
	expr : exprBinaria .  (63)

	.  reduce 63


state 55
	expr : exprUnaria .  (64)

	.  reduce 64


state 56
	registro : RECORD '{' . atributos '}'  (21)
	atributos : .  (23)

	.  reduce 23

	atributos  goto 84


state 57
	dimension : dimension '[' . expr ']'  (25)

	'-'  shift 44
	'!'  shift 45
	NUM  shift 46
	CARACTER  shift 47
	IDENT  shift 48
	CAST  shift 49
	'('  shift 50
	.  error

	expr  goto 85
	funcion  goto 52
	cast  goto 53
	exprBinaria  goto 54
	exprUnaria  goto 55


state 58
	array : dimension tipoPrimitivo .  (24)

	.  reduce 24


state 59
	defTipo : TYPE IDENT ':' tipo ';' .  (11)

	.  reduce 11


state 60
	tipoRetorno : ':' tipo .  (28)

	.  reduce 28


state 61
	defFuncion : IDENT '(' params ')' tipoRetorno '{' . defVarLocal sentencias '}'  (27)
	defVarLocal : .  (31)

	.  reduce 31

	defVarLocal  goto 86


state 62
	listaParams : listaParams ',' IDENT ':' . tipo  (35)

	'['  shift 25
	IDENT  shift 26
	RECORD  shift 27
	INT  shift 28
	REAL  shift 29
	DOUBLE  shift 30
	CHAR  shift 31
	BYTE  shift 32
	.  error

	tipo  goto 87
	tipoPrimitivo  goto 34
	array  goto 35
	registro  goto 36
	dimension  goto 37


state 63
	expr : expr . '[' expr ']'  (60)
	expr : expr . '.' IDENT  (61)
	exprBinaria : expr . '+' expr  (69)
	exprBinaria : expr . '-' expr  (70)
	exprBinaria : expr . '*' expr  (71)
	exprBinaria : expr . '/' expr  (72)
	exprBinaria : expr . '%' expr  (73)
	exprBinaria : expr . '<' expr  (74)
	exprBinaria : expr . '>' expr  (75)
	exprBinaria : expr . AND expr  (76)
	exprBinaria : expr . OR expr  (77)
	exprBinaria : expr . IGUALIGUAL expr  (78)
	exprBinaria : expr . DISTINTO expr  (79)
	exprBinaria : expr . MAYOROIGUAL expr  (80)
	exprBinaria : expr . MENOROIGUAL expr  (81)
	exprUnaria : '-' expr .  (83)

	'*'  shift 78
	'/'  shift 79
	'%'  shift 80
	'['  shift 81
	'.'  shift 82
	OR  reduce 83
	AND  reduce 83
	IGUALIGUAL  reduce 83
	DISTINTO  reduce 83
	'>'  reduce 83
	'<'  reduce 83
	MAYOROIGUAL  reduce 83
	MENOROIGUAL  reduce 83
	'+'  reduce 83
	'-'  reduce 83
	';'  reduce 83
	','  reduce 83
	']'  reduce 83
	')'  reduce 83
	'='  reduce 83


state 64
	expr : expr . '[' expr ']'  (60)
	expr : expr . '.' IDENT  (61)
	exprBinaria : expr . '+' expr  (69)
	exprBinaria : expr . '-' expr  (70)
	exprBinaria : expr . '*' expr  (71)
	exprBinaria : expr . '/' expr  (72)
	exprBinaria : expr . '%' expr  (73)
	exprBinaria : expr . '<' expr  (74)
	exprBinaria : expr . '>' expr  (75)
	exprBinaria : expr . AND expr  (76)
	exprBinaria : expr . OR expr  (77)
	exprBinaria : expr . IGUALIGUAL expr  (78)
	exprBinaria : expr . DISTINTO expr  (79)
	exprBinaria : expr . MAYOROIGUAL expr  (80)
	exprBinaria : expr . MENOROIGUAL expr  (81)
	exprUnaria : '!' expr .  (82)

	'['  shift 81
	'.'  shift 82
	OR  reduce 82
	AND  reduce 82
	IGUALIGUAL  reduce 82
	DISTINTO  reduce 82
	'>'  reduce 82
	'<'  reduce 82
	MAYOROIGUAL  reduce 82
	MENOROIGUAL  reduce 82
	'+'  reduce 82
	'-'  reduce 82
	'*'  reduce 82
	'/'  reduce 82
	'%'  reduce 82
	';'  reduce 82
	','  reduce 82
	']'  reduce 82
	')'  reduce 82
	'='  reduce 82


state 65
	funcion : IDENT '(' . listaValoresOpt ')'  (66)
	listaValoresOpt : .  (68)

	'-'  shift 44
	'!'  shift 45
	NUM  shift 46
	CARACTER  shift 47
	IDENT  shift 48
	CAST  shift 49
	'('  shift 50
	')'  reduce 68

	expr  goto 88
	funcion  goto 52
	listaValores  goto 89
	cast  goto 53
	exprBinaria  goto 54
	exprUnaria  goto 55
	listaValoresOpt  goto 90


state 66
	cast : CAST '<' . tipo '>' '(' expr ')'  (65)

	'['  shift 25
	IDENT  shift 26
	RECORD  shift 27
	INT  shift 28
	REAL  shift 29
	DOUBLE  shift 30
	CHAR  shift 31
	BYTE  shift 32
	.  error

	tipo  goto 91
	tipoPrimitivo  goto 34
	array  goto 35
	registro  goto 36
	dimension  goto 37


state 67
	expr : '(' expr . ')'  (59)
	expr : expr . '[' expr ']'  (60)
	expr : expr . '.' IDENT  (61)
	exprBinaria : expr . '+' expr  (69)
	exprBinaria : expr . '-' expr  (70)
	exprBinaria : expr . '*' expr  (71)
	exprBinaria : expr . '/' expr  (72)
	exprBinaria : expr . '%' expr  (73)
	exprBinaria : expr . '<' expr  (74)
	exprBinaria : expr . '>' expr  (75)
	exprBinaria : expr . AND expr  (76)
	exprBinaria : expr . OR expr  (77)
	exprBinaria : expr . IGUALIGUAL expr  (78)
	exprBinaria : expr . DISTINTO expr  (79)
	exprBinaria : expr . MAYOROIGUAL expr  (80)
	exprBinaria : expr . MENOROIGUAL expr  (81)

	OR  shift 68
	AND  shift 69
	IGUALIGUAL  shift 70
	DISTINTO  shift 71
	'>'  shift 72
	'<'  shift 73
	MAYOROIGUAL  shift 74
	MENOROIGUAL  shift 75
	'+'  shift 76
	'-'  shift 77
	'*'  shift 78
	'/'  shift 79
	'%'  shift 80
	'['  shift 81
	'.'  shift 82
	')'  shift 92
	.  error


state 68
	exprBinaria : expr OR . expr  (77)

	'-'  shift 44
	'!'  shift 45
	NUM  shift 46
	CARACTER  shift 47
	IDENT  shift 48
	CAST  shift 49
	'('  shift 50
	.  error

	expr  goto 93
	funcion  goto 52
	cast  goto 53
	exprBinaria  goto 54
	exprUnaria  goto 55


state 69
	exprBinaria : expr AND . expr  (76)

	'-'  shift 44
	'!'  shift 45
	NUM  shift 46
	CARACTER  shift 47
	IDENT  shift 48
	CAST  shift 49
	'('  shift 50
	.  error

	expr  goto 94
	funcion  goto 52
	cast  goto 53
	exprBinaria  goto 54
	exprUnaria  goto 55


state 70
	exprBinaria : expr IGUALIGUAL . expr  (78)

	'-'  shift 44
	'!'  shift 45
	NUM  shift 46
	CARACTER  shift 47
	IDENT  shift 48
	CAST  shift 49
	'('  shift 50
	.  error

	expr  goto 95
	funcion  goto 52
	cast  goto 53
	exprBinaria  goto 54
	exprUnaria  goto 55


state 71
	exprBinaria : expr DISTINTO . expr  (79)

	'-'  shift 44
	'!'  shift 45
	NUM  shift 46
	CARACTER  shift 47
	IDENT  shift 48
	CAST  shift 49
	'('  shift 50
	.  error

	expr  goto 96
	funcion  goto 52
	cast  goto 53
	exprBinaria  goto 54
	exprUnaria  goto 55


state 72
	exprBinaria : expr '>' . expr  (75)

	'-'  shift 44
	'!'  shift 45
	NUM  shift 46
	CARACTER  shift 47
	IDENT  shift 48
	CAST  shift 49
	'('  shift 50
	.  error

	expr  goto 97
	funcion  goto 52
	cast  goto 53
	exprBinaria  goto 54
	exprUnaria  goto 55


state 73
	exprBinaria : expr '<' . expr  (74)

	'-'  shift 44
	'!'  shift 45
	NUM  shift 46
	CARACTER  shift 47
	IDENT  shift 48
	CAST  shift 49
	'('  shift 50
	.  error

	expr  goto 98
	funcion  goto 52
	cast  goto 53
	exprBinaria  goto 54
	exprUnaria  goto 55


state 74
	exprBinaria : expr MAYOROIGUAL . expr  (80)

	'-'  shift 44
	'!'  shift 45
	NUM  shift 46
	CARACTER  shift 47
	IDENT  shift 48
	CAST  shift 49
	'('  shift 50
	.  error

	expr  goto 99
	funcion  goto 52
	cast  goto 53
	exprBinaria  goto 54
	exprUnaria  goto 55


state 75
	exprBinaria : expr MENOROIGUAL . expr  (81)

	'-'  shift 44
	'!'  shift 45
	NUM  shift 46
	CARACTER  shift 47
	IDENT  shift 48
	CAST  shift 49
	'('  shift 50
	.  error

	expr  goto 100
	funcion  goto 52
	cast  goto 53
	exprBinaria  goto 54
	exprUnaria  goto 55


state 76
	exprBinaria : expr '+' . expr  (69)

	'-'  shift 44
	'!'  shift 45
	NUM  shift 46
	CARACTER  shift 47
	IDENT  shift 48
	CAST  shift 49
	'('  shift 50
	.  error

	expr  goto 101
	funcion  goto 52
	cast  goto 53
	exprBinaria  goto 54
	exprUnaria  goto 55


state 77
	exprBinaria : expr '-' . expr  (70)

	'-'  shift 44
	'!'  shift 45
	NUM  shift 46
	CARACTER  shift 47
	IDENT  shift 48
	CAST  shift 49
	'('  shift 50
	.  error

	expr  goto 102
	funcion  goto 52
	cast  goto 53
	exprBinaria  goto 54
	exprUnaria  goto 55


state 78
	exprBinaria : expr '*' . expr  (71)

	'-'  shift 44
	'!'  shift 45
	NUM  shift 46
	CARACTER  shift 47
	IDENT  shift 48
	CAST  shift 49
	'('  shift 50
	.  error

	expr  goto 103
	funcion  goto 52
	cast  goto 53
	exprBinaria  goto 54
	exprUnaria  goto 55


state 79
	exprBinaria : expr '/' . expr  (72)

	'-'  shift 44
	'!'  shift 45
	NUM  shift 46
	CARACTER  shift 47
	IDENT  shift 48
	CAST  shift 49
	'('  shift 50
	.  error

	expr  goto 104
	funcion  goto 52
	cast  goto 53
	exprBinaria  goto 54
	exprUnaria  goto 55


state 80
	exprBinaria : expr '%' . expr  (73)

	'-'  shift 44
	'!'  shift 45
	NUM  shift 46
	CARACTER  shift 47
	IDENT  shift 48
	CAST  shift 49
	'('  shift 50
	.  error

	expr  goto 105
	funcion  goto 52
	cast  goto 53
	exprBinaria  goto 54
	exprUnaria  goto 55


state 81
	expr : expr '[' . expr ']'  (60)

	'-'  shift 44
	'!'  shift 45
	NUM  shift 46
	CARACTER  shift 47
	IDENT  shift 48
	CAST  shift 49
	'('  shift 50
	.  error

	expr  goto 106
	funcion  goto 52
	cast  goto 53
	exprBinaria  goto 54
	exprUnaria  goto 55


state 82
	expr : expr '.' . IDENT  (61)

	IDENT  shift 107
	.  error


state 83
	dimension : '[' expr ']' .  (26)

	.  reduce 26


state 84
	registro : RECORD '{' atributos . '}'  (21)
	atributos : atributos . IDENT ':' tipo ';'  (22)

	IDENT  shift 108
	'}'  shift 109
	.  error


state 85
	dimension : dimension '[' expr . ']'  (25)
	expr : expr . '[' expr ']'  (60)
	expr : expr . '.' IDENT  (61)
	exprBinaria : expr . '+' expr  (69)
	exprBinaria : expr . '-' expr  (70)
	exprBinaria : expr . '*' expr  (71)
	exprBinaria : expr . '/' expr  (72)
	exprBinaria : expr . '%' expr  (73)
	exprBinaria : expr . '<' expr  (74)
	exprBinaria : expr . '>' expr  (75)
	exprBinaria : expr . AND expr  (76)
	exprBinaria : expr . OR expr  (77)
	exprBinaria : expr . IGUALIGUAL expr  (78)
	exprBinaria : expr . DISTINTO expr  (79)
	exprBinaria : expr . MAYOROIGUAL expr  (80)
	exprBinaria : expr . MENOROIGUAL expr  (81)

	OR  shift 68
	AND  shift 69
